kubernetes-manifests-infra/prometheus/pushgateway/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pushgateway
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: pushgateway.k8s.freedom.org
      http:
        paths:
        - path: /
          backend:
            serviceName: pushgateway
            servicePort: 9091
